--- a/my2-ingress.yaml
+++ b/my2-ingress.yaml
@@ -1,20 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my2-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
-
+  name: my-ingress
 spec:
   rules:
-  - http:
+  - host: "my-grafana.com"
+    http:
       paths:
-      - path: /
-        pathType: Prefix
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service: 
+            name: grafana
+            port:
+              number: 3000
+  - host: "my-nginx.com"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
         backend:
           service:
             name: my-nginx
             port:
               number: 80
+
