--- a/monitoring-ingress.yaml
+++ b/monitoring-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-ingress
+  name: monitoring-ingress
 spec:
   rules:
   - host: "my-grafana.com"
@@ -13,7 +13,7 @@ spec:
           service: 
             name: grafana
             port:
-              number: 3000
+              number: 80
   - host: "my-nginx.com"
     http:
       paths:
@@ -24,4 +24,13 @@ spec:
             name: my-nginx
             port:
               number: 80
-
+  - host: "my-prometheus.com"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: prometheus
+            port:
+              number: 80
