--- a/my-nginx.yaml
+++ b/my-nginx.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: my-nginx
         image: nginx
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
 
