--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: prometheus
           image: prom/prometheus
+          imagePullPolicy: IfNotPresent
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
