--- a/prometheus/config-map.yaml
+++ b/prometheus/config-map.yaml
@@ -15,7 +15,7 @@ data:
         labels:
           severity: critical
         annotations:
-          summary: High Listening Processes
+          summary: 'High Listening Processes on {{ $labels.instance }} '
           description: Number of processes are towering on the node
   prometheus.yml: |-
     global:
